Added a delete and put mapping for the Person controller; Created an exceptionHandler for noSuchElement; created a service class to Person; Some refactoring